# comfyui-extras

./: README.md  __init__.py  pyproject.toml  requirements.txt
server/: monitor.py
templates/chapter6_congratulations/: exercise.json
web/: learningcenter-ui.js  monitor-ui.js  monitor.css  monitor.js  templates.js  utils.js
